@@ -1,6 +1,11 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+  10 Mar 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: roll
+  back portagetree incremental db optimizations to fix an important bug (no
+  package.mask calculations being done.)  Emerge will now abort if a dependency
+  can't be satisfied rather than printing just a warning.
+
 *portage-1.8.9_pre24 (09 Mar 2002)
 
   09 Mar 2002; Daniel Robbins <drobbins@gentoo.org> emerge: fixed missing
